--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,8 @@ body{
     margin-bottom: 82px;
     overflow-y: auto;
     padding: 25px 22px;
+    scrollbar-width: thin;
+    scrollbar-color: #DDD3F9 transparent;
 }
 
 .chat-body .message{
