--- a/src/index.css
+++ b/src/index.css
@@ -10,20 +10,64 @@
 
 body{
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     min-height: 100vh;
     background-color: linear-gradient(#F4F0FF,#DACDFF);
 }
 
+#chatbot-toggler{
+    position: fixed;
+    bottom: 30px;
+    right: 35px;
+    border: none;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    cursor: pointer;
+    border-radius: 50%;
+    background: #6D4FC2;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.2s ease;
+}
+
+#chatbot-toggler span{
+    position: absolute;
+    color: #fff;
+}
+
+.container.show-chatbot #chatbot-toggler{
+    transform: rotate(90deg);
+}
+
+#chatbot-toggler span:last-child,
+.container.show-chatbot #chatbot-toggler span:first-child{
+    opacity: 0;
+}
+
+.container.show-chatbot #chatbot-toggler span:first-child{
+    opacity: 1;
+}
+
 .chatbot-popup{
-    position: relative;
+    position: fixed;
+    opacity: 0;
+    pointer-events: none;
+    bottom: 90px;
+    right: 35px;
     width: 420px;
+    transform: scale(0.2);
     overflow: hidden;
     background: #fff;
     border-radius: 15px;
+    transform-origin: bottom right;
     box-shadow: 0 0 128px 0 rgba(0,0,0,0.1), 0 32px 64px -48px rgba(0,0,0,0.5);
+    transition: all 0.1s ease;
+}
+
+.container.show-chatbot .chatbot-popup{
+    opacity: 1;
+    transform: scale(1);
+    pointer-events: auto;
 }
 
 .chatbot-popup .chat-header{
