add responsive style

--- a/src/index.css
+++ b/src/index.css
@@ -227,5 +227,33 @@ body{
 
 .chat-form .message-input:valid~button{
     display: block;
+}
 
+/* Responsive media query for mobile  */
+@media (max-width: 520px){
+    #chatbot-toggler{
+        right: 20px;
+        bottom: 20px;
+    }
+
+    .chatbot-popup{
+        right: 0;
+        bottom: 0;
+        height: 100%;
+        border-radius: 0;
+        width: 100%;
+    }
+
+    .chatbot-popup .chat-header{
+        padding: 12px 15px;
+    }
+
+    .chat-body{
+        height: calc(90% - 55px);
+        padding: 25px 15px;
+    }
+    
+    .chat-footer{
+        padding: 10px 15px 15px;
+    }
 }
